Fri Feb 18 20:48:32 2000  Brian Gough  <bjg@network-theory.co.uk>

	* swap_source.c (FUNCTION): added gsl_vector_reverse function for
 	flipping the order of a vector

	* copy_source.c: renamed gsl_vector_copy to gsl_vector_cpy
	since it acts like memcpy (dest, src) not 'cp(copy) from to'

Thu Dec  2 20:39:02 1999  Brian Gough  <bjg@network-theory.co.uk>

	* init_source.c: fixed bug, block element needs to be null in
 	gsl_vector_alloc_from_vector to maintain correct ownership,
	added gsl_vector_view_from_vector (Thanks to Fabrice Rossi)

Tue Oct 19 14:13:14 1999  Brian Gough  <bjg@network-theory.co.uk>

	* added gsl_vector_swap function to exchange elements

Fri Oct  1 15:47:45 1999  Brian Gough  <bjg@network-theory.co.uk>

	* removed support for gsl_vector_ptr. Use set/get instead.

	* now uses separate block directory for memory management

Mon Mar  1 19:38:16 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* test_source.c: added tests for gsl_vector_ptr with and without
 	stride

	* gsl_vector_char.h: added missing code to gsl_vector_char_ptr for
 	stride in char case.
	

Sun Nov  8 18:39:40 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test_io.c, test_complex_io.c: split out the printf/scanf
 	routines since these aren't supported on all platforms
	for long double

Fri Jul 24 19:44:52 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added parent pointer in structs, to determine whether or not
 	we're allowed to free the memory pointed to by * data.

Wed Jun 10 19:13:35 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* init_source.c: added a cast for each malloc

Sun Apr 26 14:10:06 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added support for complex vectors

Mon Apr  6 15:06:38 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* make range checking the default, you have to define
 	GSL_RANGE_CHECK_OFF to turn it off
